Fix box letters expanding the box width on small devices

--- a/index.css
+++ b/index.css
@@ -204,6 +204,8 @@ svg {
 }
 
 .box .box-letter {
+    display: block;
+    position: absolute;
     line-height: normal;
     font-size: 2rem;
     font-weight: bold;
